Some basic styling and login page template

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="bootstrap.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="login.css" />
+
     <title>Micro chat</title>
   </head>
-  <body></body>
+  <body>
+    <div class="login-page">
+      <div class="login-page__content">
+        <h1>Hello!</h1>
+
+        <form autocomplete="off">
+          <div class="mt-3">
+            <label for="login-id" class="form-label">Login</label>
+            <input id="login-id" type="text" class="form-control" />
+          </div>
+          <div class="mt-3">
+            <label for="pass-id" class="form-label">Password</label>
+            <input id="pass-id" type="password" class="form-control" />
+          </div>
+
+          <div class="mt-5 d-flex align-items-center justify-content-between">
+            <button type="submit" class="btn mc-button mc-button-flow">sign in</button>
+            <!-- <button type="button" class="btn mc-button mc-button-solid">sign up</button> -->
+            <a href="javascript:void(0)" class="mc-anchor">sign up</a>
+          </div>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
