Register page template

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="login-page">
-      <div class="login-page__content">
+      <div class="login-page__content common-card">
         <h1>Hello!</h1>
 
         <form autocomplete="off">
@@ -35,8 +35,7 @@
 
           <div class="mt-5 d-flex align-items-center justify-content-between">
             <button type="submit" class="btn mc-button mc-button-flow">sign in</button>
-            <!-- <button type="button" class="btn mc-button mc-button-solid">sign up</button> -->
-            <a href="javascript:void(0)" class="mc-anchor">sign up</a>
+            <a href="/register.html" class="mc-anchor">sign up</a>
           </div>
         </form>
       </div>
