--- a/templates/styles.css
+++ b/templates/styles.css
@@ -8,6 +8,7 @@
 
   --mc-primary: rgb(175, 36, 255);
   --mc-primary-dark: rgb(140, 29, 204);
+  --mc-primary-darkest: rgb(60, 12, 89);
   --mc-primary-tr: rgba(232, 191, 255, 0.5);
 
   --mc-active-primary: rgb(217, 30, 124);
@@ -116,6 +117,45 @@ a.mc-anchor:active {
 }
 
 /* --------------------------------------------------------------------------------- */
+.mc-navigator {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+
+  box-shadow: 0px 0px 2px var(--mc-shadow);
+  border-top-right-radius: 6px;
+  border-top-left-radius: 6px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  padding: 0.5rem;
+  background: linear-gradient(
+    0deg,
+    rgba(175, 36, 255, 0.1) 0%,
+    rgba(255, 255, 255, 0) 50%,
+    rgba(255, 255, 255, 0) 85%,
+    rgba(150, 100, 200, 0.2) 100%
+  );
+}
+.mc-navigator .navbar-brand {
+  padding-right: 8px;
+  padding-left: 8px;
+  color: var(--mc-primary-dark);
+}
+
+.mc-navigator .nav-link {
+  color: var(--mc-primary);
+}
+.mc-navigator .nav-link:hover,
+.mc-navigator .nav-link:focus {
+  color: var(--mc-primary-dark);
+}
+.mc-navigator .nav-link.active {
+  color: var(--mc-active-primary)
+}
+
+
 .common-card {
   padding: 20px;
   box-shadow: 1px 1px 4px var(--mc-shadow);
