Passing friend's name to message list

--- a/frontend/src/app/sites/main/components/chat-core/chat-message/cm.module.scss
+++ b/frontend/src/app/sites/main/components/chat-core/chat-message/cm.module.scss
@@ -12,6 +12,10 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     font-size: 10px;
+
+    > span.mine {
+      color: var(--mc-active-primary);
+    }
   }
 
   &.mine {
