--- a/frontend/src/app/sites/main/components/chat-core/chat-message/cm.module.scss
+++ b/frontend/src/app/sites/main/components/chat-core/chat-message/cm.module.scss
@@ -32,6 +32,7 @@
     word-wrap: break-word;
     word-break: break-word;
     text-align: left;
+    white-space: pre-wrap;
   }
   &.mine > &__msg {
     border-top-right-radius: 0;
